stabilize M8 semantic evidence across JDKs